--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     
 
         <a href="https://papergrid.in/" class="logo"> 
-                    <img src="images/180907_-_Logo_c4a7a6be-2a96-4142-a13b-1b2c05934a4e.avif" alt="">
+                    <img src="images/https://papergrid.in/cdn/shop/files/180907_-_Logo_c4a7a6be-2a96-4142-a13b-1b2c05934a4e.png?v=1679402450&width=500" alt="">
 
         </a>
     
